# qubes-gui-rust

./: .gitignore  Cargo.toml  README.md
.cargo/: config
qubes-castable/: Cargo.toml
qubes-castable/src/: lib.rs
qubes-demo-agent/: Cargo.toml
qubes-demo-agent/src/: main.rs
qubes-gui/: Cargo.toml
qubes-gui-agent/: Cargo.toml
qubes-gui-agent-proto/: Cargo.toml
qubes-gui-agent-proto/src/: lib.rs
qubes-gui-agent/src/: lib.rs
qubes-gui-client/: Cargo.toml
qubes-gui-client/src/: agent.rs  buffer.rs  lib.rs
qubes-gui-client/src/agent/: io.rs
qubes-gui-client/src/buffer/: tests.rs
qubes-gui-connection/: Cargo.toml
qubes-gui-connection/src/: buffer.rs  lib.rs
qubes-gui-gntalloc/: Cargo.toml
qubes-gui-gntalloc/src/: lib.rs
qubes-gui-server/: Cargo.toml
qubes-gui/src/: lib.rs
vchan/: Cargo.toml
vchan-sys/: Cargo.toml
vchan-sys/src/: lib.rs
vchan/src/: lib.rs
