[package]
name = "qubes-demo-agent"
version = "0.1.0"
edition = "2018"
publish = false
license = "GPLv2+"

[dependencies]
vchan = { path = "../vchan", version = "0.1.0" }
qubes-gui = { path = "../qubes-gui", version = "0.1.0" }
qubes-gui-client = { path = "../qubes-gui-client", version = "0.1.0" }
qubes-castable = { path = "../qubes-castable", version = "0.1.0" }
qubes-gui-gntalloc = { path = "../qubes-gui-gntalloc", version = "0.1.0" }
qubes-gui-agent-proto = { path = "../qubes-gui-agent-proto" }
libc = { version = "0.2.80" }
