[package]
name = "qubes-gui-client"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
vchan = { path = "../vchan", version = "0.1.0" }
qubes-gui = { path = "../qubes-gui", version = "0.1.0" }
qubes-castable = { path = "../qubes-castable", version = "0.1.0" }

[[bin]]
name = "gui-agent"
path = "bin/server.rs"
